Fix nav hover color: light sage green visible on dark green background

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body.menu-open .nav a {
 }
 
 body.menu-open .nav a:hover {
-  color: #c4c4c0;
+  color: #a0d4b2;
 }
 
 /* Hamburger bars turn light too */
